# easybot

./: .gitignore  CHANGELOG.md  COMMANDS.md  LICENSE  README.md  README.rst  context7.json  pyproject.toml  requirements-dev.txt
.github/workflows/: codeql.yml  docs.yml  lint.yml  publish.yml
.trae/rules/: architecture-design.md  async-patterns.md  coding-style.md  logging-standards.md  python-conventions.md  testing-guidelines.md
.trae/skills/: easybot-assistant.skill
.trae/skills/easybot-assistant/: SKILL.md
.trae/skills/easybot-assistant/assets/examples/: customer_service_bot.py  guess_number_game.py  large_file_upload_bot.py  todo_bot.py
.trae/skills/easybot-assistant/assets/templates/: basic_bot.py  plugin_template.py  rich_media_template.py  session_template.py
.trae/skills/easybot-assistant/references/: api-reference.md  best-practices.md  message-builders.md  plugin-system.md  session-management.md  troubleshooting.md
.trae/skills/easybot-assistant/references/examples/: customer-service-bot.md  guess-number-game.md  todo-bot.md
docs/: 01_简介.md  02_快速入门.md  03_SDK组件.md  04_API参考.md  05_Messages_Model.md  06_Model库.md  07_插件与权限.md  08_Session会话管理器.md  09_常见问题Q&A.md  10_联系和反馈.md  11_更新日志.md  README.md  package-lock.json  package.json
docs/.vuepress/: config.ts
docs/.vuepress/public/: robots.txt
easybot/: __init__.py  api.py  bot.py  builders.py  exceptions.py  logger.py  messages_model.py  models.py  plugins.py  protocol.py  sandbox.py  session.py
easybot/_internal/: __init__.py  constants.py  dedup.py  event_dispatcher.py  event_utils.py  http_client.py  intent.py  lifecycle.py  message_utils.py  reply_strategy.py  utils.py  ws_base.py  ws_client.py
easybot/crypto/: __init__.py  ed25519(cryptography版).py  ed25519.py
examples/: 01_simple_workflow.py  02_protocols.py  03_reply.py  04_event_decorators.py  05_lifecycle_events.py  06_message_builder.py  07_local_image.py  08_plugins_permissions.py  09_session_waitfor.py  10_api_usage.py  11_complete_game.py  12_optimized_waitfor.py  13_hot_reload.py  14_send_api_matrix.py  15_large_file_upload.py  README.md
